--- a/style.css
+++ b/style.css
@@ -1,10 +1,16 @@
+body {
+  width: 100%;
+}
+
 .container {
   width: 460px;
+  margin: auto 0;
 }
 
 .grid-row {
   display: flex;
-  /* justify-content: center; */
+  justify-content: center;
+  align-items: center;
 }
 
 .grid-box {
